@@ -15,8 +15,9 @@ import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
-import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/webflux/v1/tecnologias")
@@ -28,75 +29,16 @@ public class TechnologyController {
     private final TechnologyMapper technologyMapper;
 
     @Operation(
-            summary = "Registrar una nueva tecnologia (HU1)",
-            description = "Registra una tecnologia en la base de datos",
+            summary = "Registrar una nueva tecnología (HU1)",
+            description = "Registra una tecnología en la base de datos",
             responses = {
                     @ApiResponse(
                             responseCode = "201",
-                            description = "tecnologia creada exitosamente",
-                            content = @Content(
-                                    mediaType = "application/json",
-                                    examples = {
-                                            @ExampleObject(
-                                                    name = "Ejemplo creacion Exitosa",
-                                                    value = """
-                            {
-                              "id": 1,
-                              "name": "Java",
-                              "description": "Lenguaje de programacion"
-                            }
-                            """
-                                            )
-                                    }
-                            )
+                            description = "Tecnología creada exitosamente"
                     ),
                     @ApiResponse(
                             responseCode = "400",
-                            description = "Error de validacion o nombre duplicado",
-                            content = @Content(
-                                    mediaType = "application/json",
-                                    examples = {
-                                            @ExampleObject(
-                                                    name = "Ejemplo Nombre Duplicado",
-                                                    value = """
-                            {
-                              "status": 400,
-                              "error": "Bad Request",
-                              "message": "El nombre de la tecnologia ya existe"
-                            }
-                            """
-                                            ),
-                                            @ExampleObject(
-                                                    name = "Ejemplo Error de Validacion",
-                                                    value = """
-                            {
-                              "status": 400,
-                              "error": "Bad Request",
-                              "message": "El nombre es obligatorio"
-                            }
-                            """
-                                            )
-                                    }
-                            )
-                    ),
-                    @ApiResponse(
-                            responseCode = "500",
-                            description = "Error interno del servidor",
-                            content = @Content(
-                                    mediaType = "application/json",
-                                    examples = {
-                                            @ExampleObject(
-                                                    name = "Ejemplo Error 500",
-                                                    value = """
-                            {
-                              "status": 500,
-                              "error": "Internal Server Error",
-                              "message": "Error interno del servidor"
-                            }
-                            """
-                                            )
-                                    }
-                            )
+                            description = "Error de validación o nombre duplicado"
                     )
             }
     )
@@ -108,56 +50,51 @@ public class TechnologyController {
                 .map(technologyMapper::toDto);
     }
 
-
     @Operation(
-            summary = "Listar tecnologias (HU2)",
-            description = "Retorna lista de tecnologias, orden asc/desc por nombre",
+            summary = "Listar tecnologías (HU2)",
+            description = "Retorna lista de tecnologías, orden asc/desc por nombre",
             responses = {
-                    @ApiResponse(
-                            responseCode = "200",
-                            description = "Lista de tecnologias obtenida"
-                    ),
-                    @ApiResponse(
-                            responseCode = "500",
-                            description = "Error interno del servidor",
-                            content = @Content(
-                                    mediaType = "application/json",
-                                    examples = {
-                                            @ExampleObject(
-                                                    name = "Ejemplo Error 500",
-                                                    value = """
-                            {
-                              "status": 500,
-                              "error": "Internal Server Error",
-                              "message": "Error interno del servidor"
-                            }
-                            """
-                                            )
-                                    }
-                            )
-                    )
+                    @ApiResponse(responseCode = "200", description = "Lista de tecnologías obtenida")
             }
     )
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
     public Mono<PagedResponseDto<TechnologyDto>> listTechnologies(
-            @Parameter(description = "Orden de clasificación (asc/desc)", required = false)
-            @RequestParam(name = "sort", defaultValue = "asc") String sortOrder,
-            @Parameter(description = "Número de página (0-based)", required = false)
+            @Parameter(description = "Orden de clasificación (asc/desc)")
+            @RequestParam(defaultValue = "asc") String sortOrder,
+            @Parameter(description = "Número de página (0-based)")
             @RequestParam(defaultValue = "0") int page,
-            @Parameter(description = "Tamaño de página", required = false)
+            @Parameter(description = "Tamaño de página")
             @RequestParam(defaultValue = "10") int size
     ) {
         return listTechnologyUseCase.execute(sortOrder, page, size)
                 .map(pagedResponse -> PagedResponseDto.<TechnologyDto>builder()
                         .content(pagedResponse.getContent().stream()
                                 .map(technologyMapper::toDto)
-                                .toList())
+                                .collect(Collectors.toList()))
                         .pageNumber(pagedResponse.getPageNumber())
                         .pageSize(pagedResponse.getPageSize())
                         .totalElements(pagedResponse.getTotalElements())
                         .totalPages(pagedResponse.getTotalPages())
                         .isLastPage(pagedResponse.isLastPage())
                         .build());
+    }
+
+    @Operation(
+            summary = "Buscar tecnología por nombre",
+            description = "Busca una tecnología específica por su nombre exacto",
+            responses = {
+                    @ApiResponse(responseCode = "200", description = "Tecnología encontrada"),
+                    @ApiResponse(responseCode = "404", description = "Tecnología no encontrada")
+            }
+    )
+    @GetMapping("/buscar")
+    @ResponseStatus(HttpStatus.OK)
+    public Mono<TechnologyDto> findByName(
+            @Parameter(description = "Nombre de la tecnología a buscar")
+            @RequestParam("nombre") String name
+    ) {
+        return listTechnologyUseCase.findByName(name)
+                .map(technologyMapper::toDto);
     }
 }
